refers #241 - Fix auto-complete (partially) - didn't work at all - alignment of readonly fields

--- a/openlegacy/openlegacy-templates/openlegacy-mobile-sample/src/main/webapp/template/openlegacy.css
+++ b/openlegacy/openlegacy-templates/openlegacy-mobile-sample/src/main/webapp/template/openlegacy.css
@@ -25,7 +25,7 @@ div.field-title {
 	color: #333;
 	vertical-align: middle;
 	line-height: 30px;
-	width: 200px;
+	width: 180px;
 	white-space: nowrap;
 }
 
